# RanobeDB_Calibre_Metadata_Source_Plugin

./: README.md  build.py  build.sh  pyproject.toml
src/ranobedb_light_novels/: __init__.py
tests/: __init__.py  mock_calibre.py  test_batch.py  test_interactive.py
tests/results/: batch_test_20260105_133712.json
