[project]
name = "ranobedb-light-novels"
version = "1.0.0"
description = "Calibre metadata plugin for RanobeDB light novels"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "RanobeDB Plugin Author"}
]
keywords = ["calibre", "plugin", "metadata", "light-novel", "ranobedb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture",
]

# No runtime dependencies - Calibre provides everything
dependencies = []

[project.urls]
Homepage = "https://ranobedb.org"
Repository = "https://github.com/your-username/ranobedb-calibre-plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ranobedb_light_novels"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
